# ELSAR

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cc  run.sh
include/elsar/: sort.h
include/elsar/internal/: embedding.h  globals.h  in_memory_sort.h  rmi.h  utils.h
